--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -5,4 +5,6 @@
     <li> <%= link_to article.title, article_path(article) %></li>
   <% end %>
 </ul>
+<% if logged_in? %>
 <%= link_to "delete",tag_path(@tag), method: :delete, data: {confirm: "Really delete the tag?"} %>
+<% end %>
